# pymake

./: .gitignore  README.md  pymake.iss  pyproject.toml
src/: main.py
src/utils/: show_version.py
