[project]
name = "pymake"
version = "0.1.0"
description = ""
authors = [
    {name = "argoarsiks",email = "smetankauwu3008@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


